[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/TransferMarketMenu.gd" id="1"]
[ext_resource type="Texture2D" path="res://images/traspasos.png" id="2"]

[node name="TransferMarketMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_top = -50.0
offset_bottom = 50.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MERCADO DE TRASPASOS"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TransferableButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 80)
text = "JUGADORES TRANSFERIBLES"
theme_override_font_sizes/font_size = 20

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="ActiveNegotiationsButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 80)
text = "NEGOCIACIONES ACTIVAS"
theme_override_font_sizes/font_size = 20

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dinero disponible: â‚¬22,000"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="BackButton" type="Button" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Volver al Barrio"
